--- a/spec/fixtures/vcr_cassettes/github_auth_service.yml
+++ b/spec/fixtures/vcr_cassettes/github_auth_service.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://quest-quill-api.onrender.com/api/v1/users?email=waterbottle@gmail.com&password=water&username=waterbottle
+    uri: https://quest-quill-api.onrender.com/api/v1/users/auth?access_token=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&login=elizakeating&uid=134974541
     body:
       encoding: UTF-8
       string: ''
@@ -21,7 +21,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 08 Nov 2023 03:39:03 GMT
+      - Wed, 08 Nov 2023 22:30:50 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -29,19 +29,19 @@ http_interactions:
       Connection:
       - keep-alive
       Cf-Ray:
-      - 822ac950da315391-DEN
+      - 8231433e9a805188-DEN
       Cf-Cache-Status:
       - DYNAMIC
       Cache-Control:
       - max-age=0, private, must-revalidate
       Etag:
-      - W/"1b3f06ecd8fe03b9472b4a5435ca6391"
+      - W/"921eaae9d4c766be9227962276765440"
       Vary:
       - Accept-Encoding
       Referrer-Policy:
       - strict-origin-when-cross-origin
       Rndr-Id:
-      - 638e5233-d182-45ba
+      - bf20d48c-6105-448b
       X-Content-Type-Options:
       - nosniff
       X-Download-Options:
@@ -53,9 +53,9 @@ http_interactions:
       X-Render-Origin-Server:
       - Render
       X-Request-Id:
-      - 073224e2-cdad-45b2-8919-8f33ab4c1978
+      - 2d1c8f6b-602e-4fa9-abbd-ffdeb5d78277
       X-Runtime:
-      - '2.352489'
+      - '1.438604'
       X-Xss-Protection:
       - '0'
       Server:
@@ -64,6 +64,6 @@ http_interactions:
       - h3=":443"; ma=86400
     body:
       encoding: ASCII-8BIT
-      string: '{"data":{"id":"17","type":"user","attributes":{"username":"waterbottle","email":"waterbottle@gmail.com","user_photo":{"name":"user_photo","record":{"id":17,"username":"waterbottle","email":"waterbottle@gmail.com","password_digest":"$2a$12$pU3y.zEhiwC6pdf3H8Xmn.JSVH5XDtGzhtQls/rfNFns9pF0laniy","created_at":"2023-11-08T03:39:02.950Z","updated_at":"2023-11-08T03:39:02.950Z","token":null,"token_expiration":null}},"token":null,"token_expiration":null,"campaigns":[]}}}'
-  recorded_at: Wed, 08 Nov 2023 03:39:02 GMT
+      string: '{"data":{"id":"26","type":"user","attributes":{"uid":"134974541","username":"elizakeating","email":"elizakeating","user_photo":{"name":"user_photo","record":{"username":"elizakeating","uid":"134974541","auth_token":"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","password_digest":"$2a$12$iWhU/JAIeRwNSXyVSAS0xO712xMEMziRVjK3sY1uhlyWSJFmEaRqm","email":"elizakeating","id":26,"created_at":"2023-11-08T22:19:57.462Z","updated_at":"2023-11-08T22:30:50.875Z","token":null,"token_expiration":null}},"token":null,"token_expiration":null,"auth_token":"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","campaigns":[]}}}'
+  recorded_at: Wed, 08 Nov 2023 22:30:50 GMT
 recorded_with: VCR 6.2.0
