generator buttons, index pages, testing and some styling

--- a/spec/fixtures/vcr_cassettes/bob_passwordless_login.yml
+++ b/spec/fixtures/vcr_cassettes/bob_passwordless_login.yml
@@ -2468,4 +2468,72 @@ http_interactions:
         1\"","player_num":5,"themes":"\"spooky\"","created_at":"2023-11-06T20:15:02.528Z","updated_at":"2023-11-06T20:15:02.528Z","user_id":1},{"id":2,"name":"Campaign
         2","player_num":5,"themes":"Spooky","created_at":"2023-11-06T20:15:35.487Z","updated_at":"2023-11-06T20:15:35.487Z","user_id":1}]}}}'
   recorded_at: Wed, 08 Nov 2023 23:22:57 GMT
+- request:
+    method: patch
+    uri: https://quest-quill-api.onrender.com/api/v1/users/update_token?token=LfB_9W0mkQ8XtDidAN6AWQ&user=1
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.11
+      Content-Length:
+      - '0'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Wed, 08 Nov 2023 23:45:40 GMT
+      Content-Type:
+      - application/json; charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Cf-Ray:
+      - 8231b0e3aea3538d-DEN
+      Cf-Cache-Status:
+      - DYNAMIC
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      Etag:
+      - W/"8c40731b2fb7666606773e7cef97ba67"
+      Vary:
+      - Accept-Encoding
+      Referrer-Policy:
+      - strict-origin-when-cross-origin
+      Rndr-Id:
+      - 6459e4b6-29d6-47c8
+      X-Content-Type-Options:
+      - nosniff
+      X-Download-Options:
+      - noopen
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Permitted-Cross-Domain-Policies:
+      - none
+      X-Render-Origin-Server:
+      - Render
+      X-Request-Id:
+      - 6dda7e0d-cd03-4c0e-b494-8365fb7f1888
+      X-Runtime:
+      - '0.105324'
+      X-Xss-Protection:
+      - '0'
+      Server:
+      - cloudflare
+      Alt-Svc:
+      - h3=":443"; ma=86400
+    body:
+      encoding: ASCII-8BIT
+      string: '{"data":{"id":"1","type":"user","attributes":{"uid":null,"username":"bobsmith","email":"bobsmith@gmail.com","user_photo":{"name":"user_photo","record":{"id":1,"username":"bobsmith","email":"bobsmith@gmail.com","password_digest":"$2a$12$YsrT9OKtuGf9a1k.B2t6CurMaPE9fkbDjGhZI/gv846TIeMqYEAa.","created_at":"2023-11-05T20:27:40.595Z","updated_at":"2023-11-05T20:27:40.595Z","token":"LfB_9W0mkQ8XtDidAN6AWQ","token_expiration":"2023-11-08T23:55:40.539Z","uid":null,"auth_token":null}},"token":"LfB_9W0mkQ8XtDidAN6AWQ","token_expiration":"2023-11-08T23:55:40.539Z","auth_token":null,"campaigns":[{"id":1,"name":"\"Campaign
+        1\"","player_num":5,"themes":"\"spooky\"","created_at":"2023-11-06T20:15:02.528Z","updated_at":"2023-11-06T20:15:02.528Z","user_id":1},{"id":2,"name":"Campaign
+        2","player_num":5,"themes":"Spooky","created_at":"2023-11-06T20:15:35.487Z","updated_at":"2023-11-06T20:15:35.487Z","user_id":1}]}}}'
+  recorded_at: Wed, 08 Nov 2023 23:45:40 GMT
 recorded_with: VCR 6.2.0
